- history page - avoid duplicate name in presets - BUG: sometimes the side panels stop responding on the home page. Not sure of repro-steps yet - BUG: side-panel stayed visible between pages in side-menu

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -199,6 +199,20 @@
 	float:left;
 }
 
+.dice-icon-history {
+	background-size:100% 100%;
+	background-image:url("");
+	background-repeat:no-repeat;
+	vertical-align:middle;
+	text-align:center;
+	line-height:1.5em;
+	width:1.5em;
+	height:1.5em;
+	margin-left:0;
+	margin-top:0;
+	float:left;
+}
+
 .d2-icon {
 	background-image:url("../img/D2-nofill.svg");
 }
